--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ Hello there, awesome person!
 
 +    Hello there, awesome person! 
  
+<img src="https://octodex.github.com/images/vinyltocat.png">
 
 +  </body>
 
