--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@ Hello there, awesome person!
  
 <img src="https://octodex.github.com/images/vinyltocat.png">
 
+ 
+ 
+ <ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
+And...
+
+<ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+</ul>
+ 
+ 
+ 
 +  </body>
 
 +
