--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Hello there, awesome person!
  
  
  <ol>
-    <li>This</li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
     <li>Is an</li>
     <li>Ordered list</li>
   
