--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ Hello there, awesome person!
 +<head>
 
 +        <title>My awesome web page</title>
-
+<link rel="stylesheet" href="style.css">
 +    </head>
 
 +  <body>
